byte-code-compiler/test_files/typing/bad/testfile-missing_main-1.psc
int_32 f() {
  return 0;
}
